[level 1] Title: 같은 숫자는 싫어, Time: 36.16 ms, Memory: 115 MB -BaekjoonHub