@@ -2,13 +2,13 @@ import java.util.*;
 
 public class Solution {
 	public int[] solution(int []arr) {
-        List<Integer> list = new ArrayList<>();
-        
-        for (int i = 0; i < arr.length; i++) {
-			if(!list.contains(arr[i])) list.add(arr[i]);
-			else if(list.get(list.size()-1) != arr[i]) list.add(arr[i]);
+		LinkedList<Integer> list = new LinkedList<>();
+		list.add(arr[0]);
+		
+		for(int i=1;i<arr.length;i++) {
+			if(list.getLast()!=arr[i]) list.add(arr[i]);
 		}
-
+		
         return list.stream().mapToInt(Integer::intValue).toArray();
     }
 }
